--- a/style/index.css
+++ b/style/index.css
@@ -30,7 +30,7 @@
 
 .aside {
     background-color: #333333;
-    width: 100vw;
+    width: 100%;
     height: auto;
 }
 
@@ -52,7 +52,7 @@ a {
 /* section */
 .section {
     width: 100%;
-    height: 40vh;
+    height: 300px;
     background-color: #702663;
 }
 
